--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,3 +14,9 @@ jobs:
      - uses: actions/checkout@v3
      - name: compile code
        run: gcc hello.c -o hello
+     - name: upload artifact
+       uses: actions/upload-artifact@v4
+       with:
+         name: hello-binary
+         path: hello
+
