--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,4 +19,19 @@ jobs:
        with:
          name: hello-binary
          path: hello
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: hello-binary
+          path: .
+      - name: make the binary file executable
+        run: chmod +x hello
+      - name: run test
+        run: |
+          ./hello | grep -q "Hello, World!" && echo "Test passed" || (echo "Test failed" && exit 1)
 
